--- a/src/main/resources/templates/users/add-user1.html
+++ b/src/main/resources/templates/users/add-user1.html
@@ -44,6 +44,26 @@
 							<span th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"
 							class="text-danger"></span>
 						</div>
+						<div class="form-group col-md-6">
+							<label for="type" class="col-form-label">Type</label> <select
+								class="form-control-range" th:field="*{type}">
+								<option th:each="tp : ${types}" th:value="${tp}"
+									class="form-control" th:text="${tp}"
+									th:selected="${user.type=tp}"></option>
+								</select>
+								<span th:if="${#fields.hasErrors('type')}" th:errors="*{type}"
+								class="text-danger"></span>
+						</div>
+						<div class="form-group col-md-6">
+							<label for="gender" class="col-form-label">Gender</label> <select
+								class="form-control-range" th:field="*{gender}">
+								<option th:each="gen : ${genders}" th:value="${gen}"
+									class="form-control" th:text="${gen}"
+									th:selected="${user.gender=gen}"></option>
+							</select>
+							<span th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"
+								class="text-danger"></span>
+						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 mt-3">
