--- a/src/main/resources/templates/users/add-user1.html
+++ b/src/main/resources/templates/users/add-user1.html
@@ -23,20 +23,23 @@
 				<form action="#" th:action="@{/users/add/}" th:object="${user}"
 					method="post">
 					<div class="row">
-						<div class="form-group col-md-6">
-							<label for="name" class="col-form-label">Name</label> <input
-								type="text" th:field="*{name}" class="form-control" id="name"
-								placeholder="Name">
-							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+					
+					<div class="form-group col-md-6">
+						<label for="username" class="col-form-label">Username</label> <input
+								type="text" th:field="*{username}" class="form-control" id="username"
+								placeholder="Username">
+							<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
 								class="text-danger"></span>
 						</div>
+						
 						<div class="form-group col-md-6">
-							<label for="email" class="col-form-label">Email</label> <input
-								type="text" th:field="*{email}" class="form-control" id="email"
-								placeholder="Email"> 
-								<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+							<label for="password" class="col-form-label">Password</label> <input
+								type="password" th:field="*{password}" class="form-control" id="password"
+								placeholder="Password">
+							<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
 								class="text-danger"></span>
-						</div>						
+						</div>
+						
 						<div class="form-group col-md-6">
 							<label for="birthDate" class="col-form-label">Birth Date</label>
 							<input type="date" th:field="*{birthDate}" class="form-control"
@@ -44,26 +47,7 @@
 							<span th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"
 							class="text-danger"></span>
 						</div>
-						<div class="form-group col-md-6">
-							<label for="type" class="col-form-label">Type</label> <select
-								class="form-control-range" th:field="*{type}">
-								<option th:each="tp : ${types}" th:value="${tp}"
-									class="form-control" th:text="${tp}"
-									th:selected="${user.type=tp}"></option>
-								</select>
-								<span th:if="${#fields.hasErrors('type')}" th:errors="*{type}"
-								class="text-danger"></span>
-						</div>
-						<div class="form-group col-md-6">
-							<label for="gender" class="col-form-label">Gender</label> <select
-								class="form-control-range" th:field="*{gender}">
-								<option th:each="gen : ${genders}" th:value="${gen}"
-									class="form-control" th:text="${gen}"
-									th:selected="${user.gender=gen}"></option>
-							</select>
-							<span th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"
-								class="text-danger"></span>
-						</div>
+						
 					</div>
 					<div class="row">
 						<div class="col-md-4 mt-3">
