--- a/src/main/resources/templates/users/add-user2.html
+++ b/src/main/resources/templates/users/add-user2.html
@@ -28,13 +28,7 @@
 								type="hidden" th:field="*{id}" class="form-control" id="name"
 								placeholder="Name" th:value="${user.id}" style="display:none;">
 						</div>
-						<div class="form-group col-md-6">
-							<label for="name" class="col-form-label">UserName</label> <input
-								type="text" th:field="*{name}" class="form-control" id="name"
-								placeholder="Name">
-							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-								class="text-danger"></span>
-						</div>
+						
 						<div class="form-group col-md-6">
 							<label for="name" class="col-form-label">Name</label> <input
 								type="text" th:field="*{name}" class="form-control" id="name"
@@ -42,6 +36,37 @@
 							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
 								class="text-danger"></span>
 						</div>
+						
+						<div class="form-group col-md-6">
+							<label for="email" class="col-form-label">Email</label> <input
+								type="text" th:field="*{email}" class="form-control" id="email"
+								placeholder="Email"> 
+								<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+								class="text-danger"></span>
+						</div>						
+
+						<div class="form-group col-md-6">
+							<label for="type" class="col-form-label">Type</label> <select
+								class="form-control-range" th:field="*{type}">
+								<option th:each="tp : ${types}" th:value="${tp}"
+									class="form-control" th:text="${tp}"
+									th:selected="${user.type=tp}"></option>
+								</select>
+								<span th:if="${#fields.hasErrors('type')}" th:errors="*{type}"
+								class="text-danger"></span>
+						</div>
+						
+						<div class="form-group col-md-6">
+							<label for="gender" class="col-form-label">Gender</label> <select
+								class="form-control-range" th:field="*{gender}">
+								<option th:each="gen : ${genders}" th:value="${gen}"
+									class="form-control" th:text="${gen}"
+									th:selected="${user.gender=gen}"></option>
+							</select>
+							<span th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"
+								class="text-danger"></span>
+						</div>
+						
 					</div>
 					<div class="row">
 						<div class="col-md-4 mt-3">
