--- a/src/main/resources/templates/users/update-user.html
+++ b/src/main/resources/templates/users/update-user.html
@@ -22,28 +22,30 @@
 						<div class="form-group col-md-6">
 							<label for="id" class="col-form-label">Id</label> <input
 								type="text" th:field="*{id}" class="form-control" id="id"
-								placeholder="Id" readonly> 
-								
-								
+								placeholder="Id" readonly><span
+								th:if="${#fields.hasErrors('id')}" th:errors="*{id}"
+								class="text-danger"></span>
 						</div>
 						<div class="form-group col-md-6">
 							<label for="username" class="col-form-label">Username</label> <input
-								type="text" th:field="*{username}" class="form-control" id="username"
-								placeholder="Username"> 
-								<span
+								type="text" th:field="*{username}" class="form-control"
+								id="username" placeholder="Username"> <span
 								th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
 								class="text-danger"></span>
-								
 						</div>
 						<div class="form-group col-md-6">
 							<label for="name" class="col-form-label">Name</label> <input
 								type="text" th:field="*{name}" class="form-control" id="name"
-								placeholder="Name"> 
+								placeholder="Name"><span
+								th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+								class="text-danger"></span>
 						</div>
 						<div class="form-group col-md-6">
 							<label for="email" class="col-form-label">Email</label> <input
 								type="text" th:field="*{email}" class="form-control" id="email"
-								placeholder="Email"> 
+								placeholder="Email"><span
+								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+								class="text-danger"></span>
 						</div>
 						<div class="form-group col-md-6">
 							<label for="type" class="col-form-label">Type</label> <select
@@ -51,7 +53,9 @@
 								<option th:each="tp : ${types}" th:value="${tp}"
 									class="form-control" th:text="${tp}"
 									th:selected="${user.type=tp}"></option>
-							</select>
+							</select><span
+								th:if="${#fields.hasErrors('type')}" th:errors="*{type}"
+								class="text-danger"></span>
 						</div>
 						<div class="form-group col-md-6">
 							<label for="gender" class="col-form-label">Gender</label> <select
@@ -59,23 +63,29 @@
 								<option th:each="gen : ${genders}" th:value="${gen}"
 									class="form-control" th:text="${gen}"
 									th:selected="${user.gender=gen}"></option>
-							</select>
+							</select><span
+								th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"
+								class="text-danger"></span>
 						</div>
 						<div class="form-group col-md-6">
 							<label for="birthDate" class="col-form-label">Birth Date</label>
 							<input type="date" th:field="*{birthDate}" class="form-control"
-								id="birthDate" placeholder="01/01/2000"> 
+								id="birthDate" placeholder="01/01/2000"><span
+								th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"
+								class="text-danger"></span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 mt-3">
-							<input type="submit" name="action" class="btn btn-primary" value="Update User">
+							<input type="submit" name="action" class="btn btn-primary"
+								value="Update User">
 						</div>
 						<div class="col-md-3 mt-3">
 							<input type="reset" class="btn btn-secondary" value="Clear">
 						</div>
 						<div class="col-md-3 mt-3">
-							<input type="submit" name="action" class="btn btn-secondary" value="Cancel">
+							<input type="submit" name="action" class="btn btn-secondary"
+								value="Cancel">
 						</div>
 					</div>
 				</form>
